--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -7,3 +7,4 @@ or
 \#{link_to 'delete', course_path(@course), method: :delete, data: {confirm: 'Are you sure want to delete this course?!'}}this course
 %br/
 = link_to 'Back', :back
+= link_to 'Main page', root_path
