[#113690807] Course image uploader added.

--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -1,12 +1,20 @@
 - provide(:title, 'courses')
 = link_to 'Main page', root_path
+
 - @courses_list.each do |course|
   %h3= link_to course.title, course_path(course)
-  = course.description
-  %br/
+
+  %table
+    %tr
+      -if course.image.present?
+        %td
+          = image_tag(course.image.thumb.url, align: :middle)
+      %td
+        = course.description
+
   = link_to 'Edit', edit_course_path(course)
   or
-  \#{link_to 'delete', course_path(course), method: :delete, data: {confirm: 'Are you sure want to delete this course?!'}}
+  =link_to 'delete', course_path(course), method: :delete, data: {confirm: 'Are you sure want to delete this course?!'}
   this course
   %br/
 = paginate @courses_list
