--- a/app/views/courses/edit.html.haml
+++ b/app/views/courses/edit.html.haml
@@ -2,5 +2,6 @@
 = simple_form_for @course do |field|
   = field.input :title
   = field.input :description,  input_html:{size:'50x10'}
+  = field.input :image
   = field.submit
 = link_to 'Back', :back
