--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -1,10 +1,14 @@
 = @course.title
 %br/
+-if @course.image.present?
+ = image_tag(@course.image_url)
+ %br/
 = @course.description
 %br/
 = link_to 'Edit ', edit_course_path(@course)
 or
-\#{link_to 'delete', course_path(@course), method: :delete, data: {confirm: 'Are you sure want to delete this course?!'}}this course
+=link_to 'delete', course_path(@course), method: :delete, data: {confirm: 'Are you sure want to delete this course?!'}
+this course
 %br/
 = link_to 'Back', :back
 = link_to 'Main page', root_path
