Database.yml, index.html fixes for Heroku deployment.

--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -18,4 +18,4 @@
   =link_to 'delete', course_path(course), method: :delete, data: {confirm: 'Are you sure want to delete this course?!'}
   this course
   %br/
-= paginate @courses_list
+= paginate @courses
