--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -6,10 +6,16 @@
  %br/
 = @course.description
 %br/
-= link_to 'Edit ', edit_course_path(@course)
-or
-=link_to 'delete', course_path(@course), method: :delete, data: {confirm: 'Are you sure want to delete this course?!'}
-this course
+- if user_signed_in?
+ - if @course.belongs_to?(current_user)
+  = link_to 'Edit', edit_user_course_path(@course, current_user)
+  or
+  =link_to 'delete', user_course_path(@course, current_user), method: :delete, data: {confirm: 'Are you sure want to delete this course?!'}
+  my course
+- else
+ = link_to 'Sign in', new_user_session_path
+ if you want to create your own course
 %br/
 = link_to 'Back', :back
 = link_to 'Main page', root_path
+
