--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,9 +1,16 @@
 !!!
 %html
   %head
+    %p
+      = notice
+    %p
+      = alert
     %title= full_title(yield(:title))
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
     = yield
+  = debug(params) if Rails.env.development?
+  current user:
+  = current_user.id if user_signed_in?
