Style fixes. User.owner_of? added instead of Course.belongs_to?

--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -1,13 +1,15 @@
 - provide(:title, 'courses')
 = link_to 'Main page', root_path
 %br/
+
 - if !user_signed_in?
   = link_to 'Sign in', new_user_session_path
   if you want to create your own course
 
 - @courses.each do |course|
   %h3
-    - if course.belongs_to?(current_user) && user_signed_in?
+
+    - if user_signed_in? && current_user.owner_of?(course)
       = link_to course.title, user_course_path(current_user, course)
     - else
       = link_to course.title, course_path(course)
@@ -21,10 +23,11 @@
       %td
         = course.description
 
-  - if user_signed_in? && course.belongs_to?(current_user)
+  - if user_signed_in? && current_user.owner_of?(course)
     = link_to 'Edit', edit_user_course_path(current_user, course)
     or
     =link_to 'delete', user_course_path(current_user, course), method: :delete, data: {confirm: 'Are you sure want to delete this course?!'}
     my course
 %br/
+
 = paginate @courses
