--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -4,10 +4,13 @@
 -if @course.image.present?
  = image_tag(@course.image_url)
  %br/
+
 = @course.description
 %br/
+
 - if user_signed_in?
- - if @course.belongs_to?(current_user)
+
+ - if current_user.owner_of?(@course)
   = link_to 'Edit', edit_user_course_path(@course, current_user)
   or
   =link_to 'delete', user_course_path(@course, current_user), method: :delete, data: {confirm: 'Are you sure want to delete this course?!'}
@@ -16,6 +19,7 @@
  = link_to 'Sign in', new_user_session_path
  if you want to create your own course
 %br/
+
 = link_to 'Back', :back
 = link_to 'Main page', root_path
 
