--- a/app/views/user/cabinet.html.haml
+++ b/app/views/user/cabinet.html.haml
@@ -7,12 +7,12 @@
    = image_tag(course.image.thumb.url, align: :middle)
   .col-md-10
    .row
-    %h3= link_to course.title, user_course_path(current_user, course)
+    %h3= link_to course.title, user_course_path(course)
    = course.description
    .row
-    = link_to 'Edit', edit_user_course_path(current_user, course)
+    = link_to 'Edit', edit_user_course_path(course)
     or
-    =link_to 'delete', user_course_path(current_user, course), method: :delete, data: {confirm: 'Are you sure want to delete this course?!'}
+    =link_to 'delete', user_course_path(course), method: :delete, data: {confirm: 'Are you sure want to delete this course?!'}
     this course
  %br/
 = paginate @my_courses
