--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -4,8 +4,8 @@
   %span.logo-lg Rubyboost
   %span.logo-mini RB
 
- %nav.navbar.navbar-static-top{:role => "navigation"}
-  =link_to '#', data: {toggle: 'offcanvas'}, role: 'button', class: 'sidebar-toggle' do
+ %nav.navbar.navbar-static-top{ role: "navigation" }
+  =link_to '#', data: { toggle: 'offcanvas' }, role: 'button', class: 'sidebar-toggle' do
    %span.sr-only Toggle navigation
   .navbar-custom-menu
    %ul.nav.navbar-nav
