--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,9 +1,10 @@
 %h2 Sign up
-= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+= simple_form_for([resource, resource.with_profile], as: resource_name, url: registration_path(resource_name)) do |f|
  = f.error_notification
  .form-inputs
-  = f.input :first_name, required: true
-  = f.input :last_name, required: true
+  = f.simple_fields_for :profile do |pf|
+   = pf.input :first_name, required: true
+   = pf.input :last_name, required: true
   = f.input :email, required: true, autofocus: true
   = f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length)
   = f.input :password_confirmation, required: true
