--- a/app/views/user/courses/show.html.haml
+++ b/app/views/user/courses/show.html.haml
@@ -8,5 +8,6 @@
 
  = link_to 'Edit ', edit_user_course_path(@course)
  or
- =link_to 'delete', user_course_path(@course), method: :delete, data: {confirm: 'Are you sure want to delete this course?!'}
+ =link_to 'delete', user_course_path(@course), method: :delete,
+  data: { confirm: 'Are you sure want to delete this course?!' }
  this course
