--- a/app/views/courses/_preview.html.haml
+++ b/app/views/courses/_preview.html.haml
@@ -4,7 +4,7 @@
    .user-block
     = image_tag '', alt: 'User avatar', class: 'img-circle'
     %span.username
-     = link_to "#{course.user.first_name} #{course.user.last_name}", user_path(course.user)
+     #{course.user.first_name} #{course.user.last_name}
     %span.description
      Created course
      = distance_of_time_in_words_to_now(course.created_at)
@@ -13,12 +13,12 @@
 
    .box-tools
     - if user_signed_in?
-     = link_to user_course_subscriptions_path(course), method: :post, remote: true,
+     = link_to user_course_subscription_path(course), method: :post, remote: true,
       style: ('display: none' if current_user.subscribed_to?(course)),
       data:{toggle: 'tooltip', remote: true}, id: "suscription-btn-#{course.id}",
       title: 'Subscribe to this course', class:'btn btn-box-tool' do
       %i.fa.fa-check
-     = link_to user_course_subscriptions_path(course), method: :delete, remote: true,
+     = link_to user_course_subscription_path(course), method: :delete, remote: true,
       style: ('display: none' if !current_user.subscribed_to?(course)),
       data:{toggle: 'tooltip', remote: true}, id: "unsuscription-btn-#{course.id}",
       title: 'Unsubscribe to this course', class:'btn btn-box-tool' do
