--- a/app/views/user/courses/show.html.haml
+++ b/app/views/user/courses/show.html.haml
@@ -1,12 +1,19 @@
 - provide(:title, "#{@course.title} course")
 .container-fluid
  .row
-  .col-md-6
+  .col-md-4
    = image_tag(@course.image_url)
-  .col-md-6
-   = @course.description
+  .row
+   .col-md-6
+    = link_to user_course_visibility_path(@course), method: :put, remote: true do
+     = button_tag 'Visible', id: "visible-btn-#{@course.id}",  type: 'button', class: 'btn btn-success', style:('display: none' unless @course.visible)
+     = button_tag 'Hidden', id: "hidden-btn-#{@course.id}",  type: 'button', class: 'btn btn-danger', style:('display: none' unless !@course.visible)
 
- = link_to 'Edit ', edit_user_course_path(@course)
- or
- =link_to 'delete', user_course_path(@course), method: :delete, data: {confirm: 'Are you sure want to delete this course?!'}
- this course
+
+   .col-md-6
+    = @course.description
+    %br/
+    = link_to 'Edit ', edit_user_course_path(@course)
+    or
+    =link_to 'delete', user_course_path(@course), method: :delete, data: {confirm: 'Are you sure want to delete this course?!'}
+    this course
