--- a/app/views/user/exclusions/create.js.erb
+++ b/app/views/user/exclusions/create.js.erb
@@ -1,4 +1,4 @@
 $('#course-subscriber-<%= @user.id %>-column').remove();
-if (<%= @course.subscribers.count < 1 %>){
+if (<%= !@course.subscribers.present? %>){
   $('#course-subscribers-list').remove();
 }
