--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -1,18 +1,34 @@
 - provide(:title, "#{course.title} course")
 .container-fluid
- .row
-  .col-md-4
-   = image_tag(course.image_url)
-  .col-md-6
-   = @course.description
- .row
-  %table.table.table-striped
-   %thead
-    %tr
-     %th Subscriber
-     %th Progress
-   %tbody
-    - @subscribers.each do |subscriber|
+ %ul#coursetab.nav.nav-tabs
+  %li.active
+   %a{"data-toggle" => "tab", :href => "#homework"} Homework
+  %li
+   %a{"data-toggle" => "tab", :href => "#subscribers"} Subscribers
+  %li
+   %a{"data-toggle" => "tab", :href => "#description"} Description
+ .tab-content
+  #homework.tab-pane.active
+   %section.content-header
+    %h1.text-center
+     Homework content
+  #subscribers.tab-pane
+   %h1.text-center
+    Subscribers
+   %table.table.table-striped
+    %thead
      %tr
-      %td #{subscriber.first_name} #{subscriber.last_name}
-      %td Progress-bar
+      %th Subscriber
+      %th Progress
+    %tbody
+     - @subscribers.each do |subscriber|
+      %tr
+       %td #{subscriber.first_name} #{subscriber.last_name}
+       %td Progress-bar
+  #description.tab-pane
+   %h1.text-center
+    Description
+   .col-md-4
+    = image_tag(course.image_url)
+   .col-md-6
+    = @course.description
