--- a/app/views/layouts/_user_dropdown_menu.html.haml
+++ b/app/views/layouts/_user_dropdown_menu.html.haml
@@ -12,6 +12,6 @@
    .btn-group
     = link_to  'Cabinet', user_cabinet_path, class: 'btn btn-default btn-flat btn-sm'
     = link_to  'My courses', user_subscription_path, class: 'btn btn-default btn-flat btn-sm'
-    = link_to 'New course', new_user_course_path(current_user), class: 'btn btn-default btn-flat btn-sm'
+    = link_to 'New course', new_user_course_path, class: 'btn btn-default btn-flat btn-sm'
   %li.user-footer
    = link_to 'Logout',  destroy_user_session_path, class: 'btn btn-default btn-flat', method: :delete
