--- a/app/views/user/courses/show.html.haml
+++ b/app/views/user/courses/show.html.haml
@@ -1,31 +1,32 @@
 - provide(:title, "#{@course.title} course")
 .container-fluid
- .row
-  .col-md-4
-   = image_tag(@course.image_url)
-  .col-md-6
-   = link_to user_course_visibility_path(@course), method: :put, remote: true do
-    = button_tag 'Visible', id: "visible-btn-#{@course.id}",  type: 'button', class: 'btn btn-success', style:('display: none' unless @course.visible)
-    = button_tag 'Hidden', id: "hidden-btn-#{@course.id}",  type: 'button', class: 'btn btn-danger', style:('display: none' if @course.visible)
-  .col-md-6
-   = @course.description
-   %br/
-   = link_to 'Edit ', edit_user_course_path(@course)
-   or
-   =link_to 'delete', user_course_path(@course), method: :delete, data: {confirm: 'Are you sure want to delete this course?!'}
-   this course
- .row
-  - unless @subscribers.count <1
-   %table.table.table-striped#course-subscribers-list
-    %thead
-     %tr
-      %th Subscriber
-      %th Progress
-      %th
-    %tbody
-     - @subscribers.each do |subscriber|
-      %tr{ id: "course-subscriber-#{subscriber.id}-column" }
-       %td #{subscriber.first_name} #{subscriber.last_name}
-       %td Progress-bar
-       %td
-        = link_to 'Exclude', user_create_course_prohibition_path(subscriber, @course), class: 'btn btn-danger', remote: true, method: :post
+ %ul#coursetab.nav.nav-tabs
+  %li
+   %a{"data-toggle" => "tab", :href => "#homework"} Homework
+  %li
+   %a{"data-toggle" => "tab", :href => "#subscribers"} Subscribers
+  %li.active
+   %a{"data-toggle" => "tab", :href => "#description"} Description
+ .tab-content
+
+  #homework.tab-pane
+   = render 'user/courses/homework', course: @course
+  #subscribers.tab-pane
+   %section.content-header
+    %h1.text-center #{@course.title} subscribers
+   - unless @subscribers.count <1
+    %table.table.table-striped#course-subscribers-list
+     %thead
+      %tr
+       %th Subscriber
+       %th Progress
+       %th
+     %tbody
+      - @subscribers.each do |subscriber|
+       %tr{ id: "course-subscriber-#{subscriber.id}-column" }
+        %td #{subscriber.first_name} #{subscriber.last_name}
+        %td Progress-bar
+        %td
+         = link_to 'Exclude', user_create_course_prohibition_path(subscriber, @course), class: 'btn btn-danger', remote: true, method: :post
+  #description.tab-pane.active
+   = render 'user/courses/description', course: @course
