[#114660465] Allow user to advance in their lessons.

--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -12,6 +12,7 @@
    %section.content-header
     %h1.text-center
      Homework content
+    = render 'courses/homework', course: course
   #subscribers.tab-pane
    %h1.text-center
     Subscribers
