[delivers #114660501] Allow user to change lessons position.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,7 @@
 *= require AdminLTE
 *= require skins/skin-blue
 *= require iCheck/flat/blue
+*= require tablednd
 *= require_tree .
 *= require_self
 */
