--- a/app/views/courses/_preview.html.haml
+++ b/app/views/courses/_preview.html.haml
@@ -31,8 +31,8 @@
   .box-body
    %h2
     = link_to course.title, course_path(course)
-   .some-good-class
-    %span.description{id: "suscription-title-#{course.id}", style: ('display: none' if !current_user.subscribed_to?(course))}
-     - unless !user_signed_in?
+   - if user_signed_in?
+    .some-good-class
+     %span.description{id: "subscription-title-#{course.id}", style: ('display: none' unless current_user.subscribed_to?(course))}
       You subscribed on this course
    = image_tag course.image.thumb.url, alt: 'Course image', class: 'img-responsive pad'
