A little bit of refactoring. Added controllers test (fail).

--- a/app/views/courses/_preview.html.haml
+++ b/app/views/courses/_preview.html.haml
@@ -21,7 +21,7 @@
      = link_to user_course_subscriptions_path(course), method: :delete, remote: true,
       style: ('display: none' if !current_user.subscribed_to?(course)),
       data:{toggle: 'tooltip', remote: true}, id: "unsubscription-btn-#{course.id}",
-      title: 'Unsubscribe to this course', class:'btn btn-box-tool' do
+      title: 'Unsubscribe from this course', class:'btn btn-box-tool' do
       %i.fa.fa-close
     -#= button_tag class:'btn btn-box-tool', data:{widget: 'collapse'}, type: nil, name: nil do
     -# %i.fa.fa-minus
