--- a/app/views/user/courses/_lesson.html.haml
+++ b/app/views/user/courses/_lesson.html.haml
@@ -1,10 +1,8 @@
-%tbody.rowlink{ data: { link: 'row' } }
- - lessons.each do |lesson|
-  %tr{ id: "#{lesson.id}" }
-   %td
-    = link_to course_lesson_path(course, lesson) do
-     #{lesson.position}
-   %td
-    = image_tag lesson.image.thumb.url, alt: 'Lesson image'
-   %td #{lesson.title}
-   %td
+%tr{ id: "#{lesson.id}" }
+ %td
+  = link_to user_course_lesson_path(course, lesson) do
+   #{lesson.position}
+ %td
+  = image_tag lesson.image.thumb.url, alt: 'Lesson image'
+ %td #{lesson.title}
+ %td
