--- a/app/views/courses/_lesson.html.haml
+++ b/app/views/courses/_lesson.html.haml
@@ -1,8 +1,20 @@
-%tr{ id: "course-lesson-#{lesson.id}-row" }
+- unless current_user.subscribed_to?(course)
+ %tr{class:'rowlink-skip', title: 'Subscribe first to proceed.', data:{toggle: 'tooltip'}}
   %td
-    = link_to course_lesson_path(course, lesson) do
-      #{lesson.position}
+   = link_to course_lesson_path(course, lesson) do
+    #{lesson.position}
   %td
-    = image_tag lesson.image.thumb.url, alt: 'Lesson image'
+   = image_tag lesson.image.thumb.url, alt: 'Lesson image'
   %td #{lesson.title}
   %td
+-else
+ %tr
+  %td
+   = link_to course_lesson_path(course, lesson) do
+    #{lesson.position}
+  %td
+   = image_tag lesson.image.thumb.url, alt: 'Lesson image'
+  %td #{lesson.title}
+  %td
+
+
