[#115579333] Added date of lessons.

--- a/app/views/courses/_lesson.html.haml
+++ b/app/views/courses/_lesson.html.haml
@@ -2,7 +2,7 @@
  %tr{class:'rowlink-skip', title: 'Subscribe first to proceed.', data:{toggle: 'tooltip'}}
   %td
    = link_to course_lesson_path(course, lesson) do
-    #{lesson.position}
+    #{lesson.date_of.to_formatted_s(:long)}
   %td
    = image_tag lesson.image.thumb.url, alt: 'Lesson image'
   %td #{lesson.title}
@@ -11,7 +11,7 @@
  %tr
   %td
    = link_to course_lesson_path(course, lesson) do
-    #{lesson.position}
+    #{lesson.date_of.to_formatted_s(:long)}
   %td
    = image_tag lesson.image.thumb.url, alt: 'Lesson image'
   %td #{lesson.title}
