--- a/app/views/user/courses/_lesson.html.haml
+++ b/app/views/user/courses/_lesson.html.haml
@@ -1,7 +1,7 @@
 %tr{ id: "#{lesson.id}" }
  %td
   = link_to user_course_lesson_path(course, lesson) do
-   #{lesson.position}
+   #{lesson.date_of.to_formatted_s(:long)}
  %td
   = image_tag lesson.image.thumb.url, alt: 'Lesson image'
  %td #{lesson.title}
