[#115579379] Lessons status added.

--- a/app/views/user/courses/_homework.html.haml
+++ b/app/views/user/courses/_homework.html.haml
@@ -12,10 +12,10 @@
  %table.table.table-striped.table-hover#homework-list
   %thead
    %tr
-    %th
+    %th Performing date
     %th
     %th Title
-    %th
+    %th Status
   %tbody.rowlink{ data: { link: 'row' } }
    - course.lessons.each do |lesson|
     = render 'user/courses/lesson', lesson: lesson, course: course
