--- a/app/views/user/courses/_lesson.html.haml
+++ b/app/views/user/courses/_lesson.html.haml
@@ -6,3 +6,4 @@
   = image_tag lesson.image.thumb.url, alt: 'Lesson image'
  %td #{lesson.title}
  %td #{lesson.state.humanize}
+ %td #{lesson.advancements.pending.count}
