--- a/app/views/user/lessons/show.html.haml
+++ b/app/views/user/lessons/show.html.haml
@@ -2,18 +2,22 @@
  .row
   %section.content-header
    %h1.text-center #{@lesson.title}
-  .col-md-3
-   %h5 Will start at:
-   %h5 #{@lesson.date_of.to_formatted_s(:long)}
-   = image_tag @lesson.image.url, alt: 'Lesson image'
-   %br/
-   = link_to 'Edit ', edit_user_course_lesson_path(@course, @lesson)
-   or
-   =link_to 'delete', user_course_lesson_path(@course, @lesson), method: :delete, data: {confirm: 'Are you sure want to delete this lesson?!'}
-   this lesson.
-  .col-md-8
-   %h3.text-center Lesson description:
-   #{@lesson.description}
+   - if @lesson.advancements.count > 0
+    = link_to  user_course_lesson_advancements_path(@course, @lesson) do
+     %button.btn.btn-primary.pull-right
+      Show advancements
+ .col-md-3
+  %h5 Will start at:
+  %h5 #{@lesson.date_of.to_formatted_s(:long)}
+  = image_tag @lesson.image.url, alt: 'Lesson image'
+  %br/
+  = link_to 'Edit ', edit_user_course_lesson_path(@course, @lesson)
+  or
+  =link_to 'delete', user_course_lesson_path(@course, @lesson), method: :delete, data: {confirm: 'Are you sure want to delete this lesson?!'}
+  this lesson.
+ .col-md-8
+  %h3.text-center Lesson description:
+  #{@lesson.description}
 
  .row
   .col-md-8.col-md-offset-2
