--- a/app/views/courses/_homework.html.haml
+++ b/app/views/courses/_homework.html.haml
@@ -10,5 +10,5 @@
     %th Title
     %th
   %tbody.rowlink{ data: { link: 'row' } }
-   - course.lessons.each do |lesson|
+   - course.lessons.by_position.each do |lesson|
     = render 'courses/lesson', lesson: lesson, course: course
