--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -3,7 +3,7 @@
 = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
  = f.error_notification
  .form-inputs
-  = f.simple_fields_for :profile do |pf|
+  = f.simple_fields_for resource.with_profile do |pf|
    = pf.input :first_name, required: true
    = pf.input :last_name, required: true
   = f.input :email, required: true, autofocus: true
