--- a/app/views/user/courses/_homework.html.haml
+++ b/app/views/user/courses/_homework.html.haml
@@ -17,7 +17,7 @@
     %th Title
     %th
   %tbody.rowlink{ data: { link: 'row' } }
-   - course.lessons.each do |lesson|
+   - course.lessons.by_position.each do |lesson|
     = render 'user/courses/lesson', lesson: lesson, course: course
 
 #CreateModal.modal.fade{"aria-labelledby" => "CreateLabel", :role => "dialog", :tabindex => "-1"}
@@ -33,7 +33,7 @@
     %h4#CreateModalLabel.modal-title Modal title
 
    .modal-body
-    = simple_form_for :lesson, url: user_course_lessons_path(course), method: :post do |f|
+    = simple_form_for course.lessons.build, url: user_course_lessons_path(course), method: :post do |f|
      = f.input :title
      = f.input :description, as: :text
      = f.input :lecture_notes, as: :text
