Fixes from lesson-3

--- a/app/views/user/profile/signed_up_with_social.haml
+++ b/app/views/user/profile/signed_up_with_social.haml
@@ -1,6 +1,6 @@
-= simple_form_for(:user, url: user_profile_edit_signed_up_with_social_path, html: { method: :put }) do |f|
+= simple_form_for(:user, url: edit_signed_up_with_social_user_profile_path, html: { method: :put }) do |f|
  = f.error_notification
- %h1 Plese introduce yourself.
+ %h1 Please introduce yourself.
  .form-inputs
   = f.simple_fields_for :profile_attributes do |pf|
    = pf.input :first_name, required: true, autofocus: true, hint: 'Please set your first'
