--- a/app/views/user/show.html.haml
+++ b/app/views/user/show.html.haml
@@ -3,6 +3,8 @@
 
 = link_to 'Edit profile', ((profile_configured? && !current_user.encrypted_password.blank?) ? edit_user_registration_path : edit_user_profile_path)
 %br/
+= link_to 'My news feed', user_newsfeeds_path
+%br/
 
 - User.omniauth_providers.each do |provider|
  = link_to "Assign your #{OmniAuth::Utils.camelize(provider)} account",
